# hwid_poc

./: .gitignore  CMakeLists.txt
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
cmake/Dependencies/: CMakeLists.txt  GoogleBenchmark.cmake  GoogleTest.cmake
src/: CMakeLists.txt
src/hwid_poc_benchmark/: CMakeLists.txt  benchmark_main.cpp
src/hwid_poc_lib/: CMakeLists.txt
src/hwid_poc_lib/hwid_poc/: example.hpp
src/hwid_poc_lib/impl/: example.cpp
src/hwid_poc_test/: CMakeLists.txt  test_main.cpp
